# rusty_json_ffi.dart

./: .packages  Cargo.toml  build.rs  cbindgen.toml  librust_dart_ffi_protobuf.h  pubspec.yaml
.dart_tool/: package_config.json
lib/: addressbook.dart  addressbook.pb.dart  addressbook.pbenum.dart  addressbook.pbjson.dart  addressbook.pbserver.dart  rust_dart_ffi_protobuf.dart
proto/: addressbook.pb.dart  addressbook.pbenum.dart  addressbook.pbjson.dart  addressbook.pbserver.dart
src/: lib.rs
test/: rust_dart_ffi_protobuf_test.dart
